updated index.html file

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML Images</title>
-  </head>
-  <body>
-    <!-- Your code here -->
-  </body>
+    <title>Image Tags Example</title>
+</head>
+<body>
+    <!-- First image with just a source attribute -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+
+    <!-- Second image with src and alt attributes -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A majestic lion" />
+
+    <!-- Third image with src, alt, and title attributes -->
+    <img 
+        src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+        alt="A powerful lion" 
+        title="The king of the jungle" 
+    />
+</body>
 </html>
